--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "node-rtsp-stream-es6",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "RTSP stream through WebSocket",
   "main": "index.js",
-  "author": "Wifsimster",
+  "author": "shbatm",
+  "original": "Wifsimster"
   "licenses": [
     {
       "type": "MIT",
@@ -12,10 +13,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Wifsimster/node-rtsp-stream-es6"
+    "url": "https://github.com/shbatm/node-rtsp-stream-es6"
   },
   "dependencies": {
     "jsmpeg": "^1.0.0",
-    "ws": "^1.1.1"
+    "ws": "^1.1.4"
   }
 }
