--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-rtsp-stream-es6",
-  "version": "1.1.0",
+  "version": "1.1.1",
+  "dist-tags": { "latest": "1.1.1" },
   "description": "RTSP stream through WebSocket",
   "main": "index.js",
   "author": "shbatm",
